# devlogix_backend

./: .gitignore  Cargo.toml  LICENSE  README.md  docker-compose.dev.yml  rustfmt.toml
.github/workflows/: run_tests.yml
config/: config.toml
migrations/: 20260130163624_add_user.up.sql  20260131182809_add_session.up.sql  20260206092345_add_email_confirmations.down.sql  20260206092345_add_email_confirmations.up.sql  20260217103117_add_password_reset_tokens.down.sql  20260217103117_add_password_reset_tokens.up.sql  20260218103758_add_workspace.down.sql  20260218103758_add_workspace.up.sql  20260224092845_add_projects.down.sql  20260224092845_add_projects.up.sql  20260225121738_add_workspace_pins.down.sql  20260225121738_add_workspace_pins.up.sql
src/: main.rs
src/adapter/: mod.rs
src/adapter/crypto/: argon2.rs
src/adapter/db/: mod.rs  session.rs
src/adapter/db/gateway/: email_confirmation.rs  mod.rs  password_reset.rs  project.rs  session.rs  user.rs  workspace.rs
src/adapter/email/: local.rs  mod.rs  smtp.rs
src/adapter/http/: app_error_impl.rs  docs.rs  mod.rs  validation.rs
src/adapter/http/extractors/: user.rs
src/adapter/http/middleware/: auth.rs  extractor.rs  mod.rs
src/adapter/http/routes/: auth.rs  mod.rs  project.rs  user.rs  workspace.rs
src/adapter/http/schema/: auth.rs  email_confirmation.rs  id.rs  mod.rs  pagination.rs  password_reset.rs  project.rs  user.rs  workspace.rs
src/adapter/storage/: s3.rs
src/application/: app_error.rs  mod.rs
src/application/dto/: auth.rs  email_confirmation.rs  id.rs  mod.rs  password_reset.rs  project.rs  session.rs  user.rs  workspace.rs
src/application/interactors/: auth.rs  email_confirmation.rs  mod.rs  password_reset.rs  project.rs  session.rs  users.rs  workspace.rs
src/application/interface/: crypto.rs  db.rs  email.rs  mod.rs  s3.rs
src/application/interface/gateway/: email_confirmation.rs  mod.rs  password_reset.rs  project.rs  session.rs  user.rs  workspace.rs
src/domain/entities/: email_confirmation.rs  id.rs  mod.rs  password_reset.rs  profile.rs  project.rs  session.rs  user.rs  workspace.rs
src/infra/: app.rs  config.rs  constants.rs  db.rs  mod.rs  setup.rs  state.rs
src/tests/: fixtures.rs  helpers.rs  mod.rs
